# ParrotVocoder

./: .gitignore  .pylintrc  LoadPretrainModel.ipynb  README.md  export_onnx_hifigan.py  inference.py  models.py  pyproject.toml  setup_dataset.py  setup_macos.sh  train.py
